--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "package.json"
   ],
   "dependencies": {
-    "angular": "~1.3.12",
+    "angular": ">=1.3.12",
     "ngstorage": "~0.3.0",
     "jsrsasign": "~5.0.5"
   },
